<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/ivLogin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_login"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:alpha="0"
        tools:alpha="100"
        android:text="@string/login"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/guideline"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtLoginEmailLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha="0"
        tools:alpha="100"
        app:endIconMode="clear_text"
        android:hint="@string/email"
        app:startIconDrawable="@drawable/baseline_email_24"
        app:layout_constraintEnd_toEndOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <com.example.mystoryapp.customview.EditTextEmail
            android:id="@+id/edtLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtLoginPasswordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        tools:alpha="100"
        android:layout_marginTop="16dp"
        app:errorEnabled="true"
        app:endIconMode="password_toggle"
        android:hint="@string/password"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:layout_constraintEnd_toEndOf="@+id/edtLoginEmailLayout"
        app:layout_constraintStart_toStartOf="@+id/edtLoginEmailLayout"
        app:layout_constraintTop_toBottomOf="@+id/edtLoginEmailLayout">

        <com.example.mystoryapp.customview.EditTextPassword
            android:id="@+id/edtLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        tools:alpha="100"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/edtLoginPasswordLayout"
        app:layout_constraintStart_toStartOf="@+id/edtLoginPasswordLayout"
        app:layout_constraintTop_toBottomOf="@+id/edtLoginPasswordLayout" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        tools:visibility="visible"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="350dp" />

</androidx.constraintlayout.widget.ConstraintLayout>