<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/maps"
        android:icon="@drawable/baseline_map_24"
        android:title="@string/maps"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/logout"
        android:icon="@drawable/baseline_logout_24"
        android:title="@string/logout"
        app:showAsAction="never"/>

</menu>